[3680] fixes shifted text problem

--- a/packages/scandipwa/src/component/ProductDownloadableLinks/ProductDownloadableLinks.style.scss
+++ b/packages/scandipwa/src/component/ProductDownloadableLinks/ProductDownloadableLinks.style.scss
@@ -73,7 +73,7 @@
 
     &-SampleTitle {
         flex: 1;
-        top: 3px;
+        margin:auto;
     }
 
     &-SampleLink {
